adding some fancy output, succeeding in extracting images

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "argparse": "^1.0.9",
     "ffmpeg-static": "^2.0.0",
     "jimp": "^0.2.27",
+    "ora": "^1.1.0",
     "temp": "^0.8.3"
   }
 }
