--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "photopack",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Pack jpeg images into a video and back.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "gulp"
   },
   "bin": {
-    "imagepack": "./bin/imagepack"
+    "imagepack": "./bin/photopack"
   },
   "repository": {
     "type": "git",
