--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "photopack",
-  "version": "0.1.4",
-  "description": "Pack jpeg images into a video and back.",
+  "version": "0.1.5",
+  "description": "Pack jpeg photos into a video and back. Acts as a (technically lossy) archive.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Sorry: no test specified :(\" && exit 1",
