--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "argparse": "^1.0.9",
     "ffmpeg-static": "^2.0.0",
+    "ini": "^1.3.4",
     "json-stable-stringify": "^1.0.1",
     "ora": "^1.1.0",
     "temp": "^0.8.3",
