--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/internetimagery/photopack#readme",
   "dependencies": {
-    "argparse": "^1.0.9",
+    "commander": "^2.9.0",
     "ffmpeg-static": "^2.0.0",
     "fs-extra": "^2.0.0",
     "ini": "^1.3.4",
